--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Works
-</body>
-</html>
+{% extends "layout2.html" %}
+
+{% block title %}
+    Books
+{% endblock %}
+
+
+{% block main %}
+
+    <div class="div-item ">
+        <form class="form1" action="/" method="get">
+
+            <form onsubmit="event.preventDefault();" role="search">
+                <label class="label1" for="search">Search for stuff</label>
+                <input class="input1" name="busquedaLibro" id="search" type="search" placeholder="Search..." autofocus required />
+                <button class="button1" type="submit">Go</button>    
+            </form>
+     
+        </form>
+    </div>
+
+    {% endblock %}
+   
