--- a/app/static/login.css
+++ b/app/static/login.css
@@ -7,7 +7,11 @@ html {
     font-family: sans-serif;
     background: linear-gradient(#141e30, #243b55);
   }
-  
+
+  .navbar {
+    z-index: 2;
+  }
+
   .login-box {
     position: absolute;
     top: 50%;
@@ -19,6 +23,7 @@ html {
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
+    z-index: 0;
   }
 
 
