--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,7 +12,7 @@
     <title>WEB-BOOKS: {% block title %}{% endblock %}</title>
 </head>
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark superposicion">
     <a id="hoverA" class="navbar-brand text-white" href="/login">WEB-BOOKS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
